--- a/africa.html
+++ b/africa.html
@@ -1,8 +1,9 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="africa.css">
+
 <head>
 <title>Africa</title>
+<link rel="stylesheet" type="text/css" href="africa.css">
 </head>
 <body>
 	
